--- a/30-33/index2.html
+++ b/30-33/index2.html
@@ -8,10 +8,8 @@
     <style>
 
         div {
-        margin: 20px auto;
-        width: 300px;
-        font-weight: bold;
-        font-size: 1rem;
+        margin: auto;
+        width: 400px;
         padding: 20px;
         background-color: rgb(93%, 93%, 93%); /* Get The Background From Image */
         color: black;
@@ -20,29 +18,39 @@
         border-color: red blue;
         }
 
-        .top-left {
+        span {
             position: absolute;
-            top: 0;
-            left: 0;
+            width: 20px;
+            text-align: center;
+            background-color: blue;
+        }
+
+        .top-left {
+            top: -8px;
+            left: -10px;
+            border-right: 3px solid red;
         }
 
         .bottom-left {
-            position: absolute;
-            bottom: 0;
-            left: 0;
+            bottom: -8px;
+            left: -10px;
+            border-right: 3px solid red;
+
         }
 
         .top-right {
-            position: absolute;
-            top: 0;
-            right: 0;
+            top: -8px;
+            right: -10px;
+            border-left: 3px solid red;
+
         }
 
         .bottom-right {
-            position: absolute;
-            bottom: 0;
-            right: 0;
+            bottom: -8px;
+            right: -10px;
+            border-left: 3px solid red;
         }
+
     </style>
 
 
