--- a/34-37/index2.html
+++ b/34-37/index2.html
@@ -8,25 +8,22 @@
     <style>
         div {
             width: 300px;
-            height: 60px;
+            margin: auto;
             background-color: rgb(93%, 93%, 93%);
-            margin: 20px;
             text-align: center;
+            /* padding: 20px; */
         }
 
-        div:nth-child(2) {
+        div::first-letter {
+            font-size: 40px;
             background-color: red;
         }
-
     </style>
 
 </head>
 <body>
     
-        <div>One</div>
-        <div></div>
-        <div>Three</div>
-
+<div>1 Hello, Welcome To Elzero Web School</div>
 
 </body>
 </html>
