--- a/46-53/index6.html
+++ b/46-53/index6.html
@@ -59,6 +59,7 @@
             padding: var(--main-padding);
             width: 8%;
             text-align: center;
+            padding-left: 10px;
         }
 
         main {
